# 4pseatBot

./: .gitignore  Cargo.toml  README.md
src/: config.rs  error.rs  main.rs
src/commands/: custom.rs  mod.rs  simple.rs
