[package]
name = "fourpseatbot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
config = { version = "0.14.0", features = ["toml"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
poise = "0.6.1"
serde = { version = "1.0.208", features = ["derive"] }
serenity = "0.12.2"
tokio = { version = "1.39.3", features = ["full"] }
