[package]
name = "fourpseatbot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
config = { version = "0.14.0", features = ["toml"] }
derive_more = { version = "1.0.0", features = ["display", "from"] }
dotenv = "0.15.0"
env_logger = { version = "0.11.5", features = ["color"] }
log = "0.4.22"
poise = "0.6.1"
serde = { version = "1.0.208", features = ["derive"] }
serenity = "0.12.2"
tokio = { version = "1.39.3", features = ["full"] }
